# onmcal

./: CMakeLists.txt  install.md
jsonTranslator/: CMakeLists.txt  jsonTranslator.cpp  jsontranslator.cpp
suitCal/: CMakeLists.txt  demo.cpp  hello.cpp
suitCal/include/: attr.h  calculator.h  cartProduct.h  constraints.h  soul.h
